--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
         <meta http-equiv="expires" content="0" />
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
-        <title>{% block title %}Ixpo SAS{% endblock %}</title>
+        <title>{% block title %}Demo{% endblock %}</title>
         {% block stylesheets %}
             <link type="text/css" rel="stylesheet" href="{{ asset('css/materialize.min.css') }}" media="screen,projection"/>
             <link type="text/css" rel="stylesheet" href="{{ asset('css/default.css') }}">
